@@ -5,52 +5,62 @@ import org.springframework.stereotype.Repository;
 import pl.yummy.business.dao.DeliveryDAO;
 import pl.yummy.domain.Delivery;
 import pl.yummy.domain.enums.DeliveryStatusEnumDomain;
+import pl.yummy.infrastructure.database.entity.enums.DeliveryStatusEnumEntity;
 import pl.yummy.infrastructure.database.repository.jpa.DeliveryJpaRepository;
 import pl.yummy.infrastructure.database.repository.mapper.DeliveryEntityMapper;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
 public class DeliveryRepository implements DeliveryDAO {
 
     private final DeliveryJpaRepository deliveryJpaRepository;
-    private final DeliveryEntityMapper mapper;
+    private final DeliveryEntityMapper deliveryEntityMapper;
 
     @Override
     public List<Delivery> findByCourier_CourierId(Long courierId) {
-        return deliveryJpaRepository.findByCourier_CourierId(courierId).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return deliveryJpaRepository.findByCourier_CourierId(courierId)
+                .stream()
+                .map(deliveryEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Delivery> findByDeliveryStatus(DeliveryStatusEnumDomain deliveryStatus) {
-        return deliveryJpaRepository.findByDeliveryStatus(deliveryStatus).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return deliveryJpaRepository.findByDeliveryStatus(
+                        // zakładamy zgodność nazw enumów
+                        DeliveryStatusEnumDomain.valueOf(deliveryStatus.name())
+                )
+                .stream()
+                .map(deliveryEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Delivery> findByStarTimeAfter(OffsetDateTime startTime) {
-        return deliveryJpaRepository.findByStarTimeAfter(startTime).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return deliveryJpaRepository.findByStarTimeAfter(startTime)
+                .stream()
+                .map(deliveryEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Delivery> findByActualDeliveryDateTimeAfterAndEstimatedDeliveryTimeIsNotNull(OffsetDateTime actualDeliveryDateTime) {
-        return deliveryJpaRepository.findByActualDeliveryDateTimeAfterAndEstimatedDeliveryTimeIsNotNull(actualDeliveryDateTime).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return deliveryJpaRepository.findByActualDeliveryDateTimeAfterAndEstimatedDeliveryTimeIsNotNull(actualDeliveryDateTime)
+                .stream()
+                .map(deliveryEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Delivery> findByAvailableDeliveryArea_AvailableDeliveryAreaId(Integer deliveryAreaId) {
-        return deliveryJpaRepository.findByAvailableDeliveryArea_AvailableDeliveryAreaId(deliveryAreaId).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+    public List<Delivery> findByAvailableDeliveryArea_AvailableDeliveryAreaId(Long deliveryAreaId) {
+        return deliveryJpaRepository.findByAvailableDeliveryArea_AvailableDeliveryAreaId(deliveryAreaId)
+                .stream()
+                .map(deliveryEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
 }
