@@ -11,46 +11,51 @@ import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
 public class InvoiceRepository implements InvoiceDAO {
 
     private final InvoiceJpaRepository invoiceJpaRepository;
-    private final InvoiceEntityMapper mapper;
+    private final InvoiceEntityMapper invoiceEntityMapper;
 
     @Override
     public Optional<Invoice> findByInvoiceNumber(String invoiceNumber) {
         return invoiceJpaRepository.findByInvoiceNumber(invoiceNumber)
-                .map(mapper::mapFromEntity);
+                .map(invoiceEntityMapper::mapFromEntity);
     }
 
     @Override
     public List<Invoice> findByBillingInformation_Customer_CustomerId(Long customerId) {
-        return invoiceJpaRepository.findByBillingInformation_Customer_CustomerId(customerId).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return invoiceJpaRepository.findByBillingInformation_Customer_CustomerId(customerId)
+                .stream()
+                .map(invoiceEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Invoice> findByIssueDateAfter(OffsetDateTime issueDate) {
-        return invoiceJpaRepository.findByIssueDateAfter(issueDate).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return invoiceJpaRepository.findByIssueDateAfter(issueDate)
+                .stream()
+                .map(invoiceEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Invoice> findByTotalAmountGreaterThanEqual(BigDecimal totalAmount) {
-        return invoiceJpaRepository.findByTotalAmountGreaterThanEqual(totalAmount).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return invoiceJpaRepository.findByTotalAmountGreaterThanEqual(totalAmount)
+                .stream()
+                .map(invoiceEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Invoice> findByDueDate(OffsetDateTime dueDate) {
-        return invoiceJpaRepository.findByDueDate(dueDate).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return invoiceJpaRepository.findByDueDate(dueDate)
+                .stream()
+                .map(invoiceEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
 }
