@@ -10,6 +10,7 @@ import pl.yummy.infrastructure.database.repository.mapper.MenuEntityMapper;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @AllArgsConstructor
@@ -17,39 +18,43 @@ public class MenuRepository implements MenuDAO {
 
 
     private final MenuJpaRepository menuJpaRepository;
-    private final MenuEntityMapper mapper;
+    private final MenuEntityMapper menuEntityMapper;;
 
     @Override
     public Optional<Menu> findByMenuName(String menuName) {
         return menuJpaRepository.findByMenuName(menuName)
-                .map(mapper::mapFromEntity);
+                .map(menuEntityMapper::mapFromEntity);
     }
 
     @Override
     public List<Menu> findByRestaurant_RestaurantId(Long restaurantId) {
-        return menuJpaRepository.findByRestaurant_RestaurantId(restaurantId).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return menuJpaRepository.findByRestaurant_RestaurantId(restaurantId)
+                .stream()
+                .map(menuEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Menu> findByValidFromBeforeAndValidToAfter(OffsetDateTime fromDate, OffsetDateTime toDate) {
-        return menuJpaRepository.findByValidFromBeforeAndValidToAfter(fromDate, toDate).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+    public List<Menu> findByValidFromBeforeAndValidToAfter(OffsetDateTime startDate, OffsetDateTime endDate) {
+        return menuJpaRepository.findByValidFromBeforeAndValidToAfter(startDate, endDate)
+                .stream()
+                .map(menuEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Menu> findByCreatedAtAfter(OffsetDateTime createdAt) {
-        return menuJpaRepository.findByCreatedAtAfter(createdAt).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return menuJpaRepository.findByCreatedAtAfter(createdAt)
+                .stream()
+                .map(menuEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Menu> findByDescriptionContainingIgnoreCase(String keyword) {
-        return menuJpaRepository.findByDescriptionContainingIgnoreCase(keyword).stream()
-                .map(mapper::mapFromEntity)
-                .toList();
+        return menuJpaRepository.findByDescriptionContainingIgnoreCase(keyword)
+                .stream()
+                .map(menuEntityMapper::mapFromEntity)
+                .collect(Collectors.toList());
     }
 }
